boreal/tests/assets/invalid_files/compilation/invalid_include.yar
// [error: cannot include]
rule a {
    condition: true
}

include "./do-not-exist.yar"
